🎨 Prevent scrollbar on embed-content

--- a/src/fragments/10-images-embeds.scss
+++ b/src/fragments/10-images-embeds.scss
@@ -39,6 +39,7 @@ div {
 
     .markdown-embed-content,
     .markdown-embed-content > .markdown-preview-view  {
+      overflow-y: unset;
       max-height: unset;
       background-color: var(--background-primary-alt);
       padding: 5px;
